# reader_for_microxml

./: .gitignore  Cargo.toml  Makefile.toml  README.md  cache52.txt  changelog.md  rustfmt.toml  t3.xml
.github/workflows/: rust.yml
docs/: aliases.js  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/iter/traits/iterator/: trait.Iterator.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/reader_for_microxml/: all.html  enum.Event.html  enum.TagState.html  enum.Token.html  index.html  sidebar-items.js  struct.PosChar.html  struct.ReaderForMicroXml.html
docs/src/reader_for_microxml/: lib.rs.html
example/: t2err.html  t3.xml
example/microxml_print_to_screen/: Cargo.toml
example/microxml_print_to_screen/src/: main.rs
example/microxml_tree/: Cargo.toml  readme.md
example/microxml_tree/src/: main.rs
examples/: microxml_print_to_screen.rs  microxml_tree.rs  t1.html  t2.html  t4.html  text_nodes.html
examples/microxml_print_to_screen/: Cargo.toml  readme.md
examples/microxml_tree/: readme.md
src/: lib.rs  main.rs  reader_for_microxml.rs
tests/: test_for_microxml.rs
tmp/: temp51.txt  temp52.txt
