[package]
name = "reader_for_microxml"
version = "2.0.2"
authors = ["bestia.dev"]
edition = "2018"
description = "reader for microXml - the simplified subset of xml"
repository = "https://github.com/bestia-dev/reader_for_microxml"
readme = "README.md"
license = "MIT"
keywords = ["rust", "xml", "microxml"]
categories = ["parsing"]
# publish to crates.io only these files
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/lib.rs",
]

[dependencies]


