[package]
name = "reader_for_microxml"
version = "2.0.2"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2018"
description = "reader for microXml - the simplified subset of xml"
repository = "https://github.com/bestia-dev/reader_for_microxml"
readme = "README.md"
license = "MIT"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["rust", "xml", "microxml"]
# Allowed categories are listed here <https://crates.io/category_slugs>
categories = ["parsing"]
# publish to crates.io only these files
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/lib.rs",
]

[dependencies]


