[package]
name = "microxml_tree"
version = "1.0.0"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description="reads microXml and fills a tree"
repository = "https://github.com/LucianoBestia/reader_for_microxml"
readme = "README.md"
license = "MIT"
keywords = ["rust", "xml", "microxml"]
categories = ["parser","lexer"]


[dependencies]
reader_for_microxml = { path = "../.." }
