[package]
name = "microxml_print_to_screen"
version = "1.0.4"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description = "reads microXml and print to screen"
repository = "https://github.com/LucianoBestia/reader_for_microxml"
readme = "README.md"
license = "MIT"
keywords = ["rust", "xml", "microxml"]
categories = ["parser","lexer"]


[dependencies]
reader_for_microxml = { path = "../.." }
